--- a/src/CSS/WinScreen.css
+++ b/src/CSS/WinScreen.css
@@ -1,5 +1,6 @@
 /* The Modal (background) */
 .modal {
+  display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
   padding-top: 100px; /* Location of the box */
@@ -8,8 +9,8 @@
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
 /* Modal Content */
@@ -19,14 +20,10 @@
   margin: auto;
   padding: 0;
   border: 1px solid #888;
-  top:20%;
-  width: 20%;
-  height: 20%;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  -webkit-animation-name: animatetop;
-  -webkit-animation-duration: 0.4s;
+  width: 60%;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
   animation-name: animatetop;
-  animation-duration: 0.4s;
+  animation-duration: 0.4s
 }
 
 /* Add Animation */
@@ -58,12 +55,18 @@
 }
 
 .modal-header {
-  padding: 2px 16px;
-  background-color: #5cb85c;
+  padding: 2px 12px;
+  background-color: #0300cf;
   color: white;
+  text-align: center;
 }
 
 .modal-body {
-  padding: 2px 16px;
+  padding: 20px 16px;
 }
 
+.modal-footer {
+  padding: 2px 12px;
+  background-color: #0300cf;
+  color: white;
+}
