--- a/src/CSS/Start.css
+++ b/src/CSS/Start.css
@@ -9,7 +9,7 @@
   border-radius: 10px;
   box-shadow: 0 9px #999;
   left: 50%;
-  top: 50%;
+  top: 35%;
   position: absolute;
   transform: translate(-50%, -50%);
 }
@@ -30,4 +30,48 @@
   background: #0300cf;
   height: 70px;
   text-align: center;
+}
+
+
+.language {
+  position: fixed;
+  left: 50%;
+  bottom: 20px;
+  transform: translate(-50%, -50%);
+  margin: 0 auto;
+  text-align: center;
+}
+
+.select-css {
+  display: block;
+  font-size: 16px;
+  font-family: sans-serif;
+  font-weight: 700;
+  color: #444;
+  line-height: 1.3;
+  padding: .6em 1.4em .5em .8em;
+  width: 100%;
+  max-width: 100%; 
+  box-sizing: border-box;
+  margin: 0;
+  border: 1px solid #aaa;
+  box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
+  border-radius: .5em;
+
+}
+.select-css::-ms-expand {
+  display: none;
+}
+.select-css:hover {
+  border-color: #888;
+}
+.select-css:focus {
+  border-color: #aaa;
+  box-shadow: 0 0 1px 3px rgba(59, 153, 252, .7);
+  box-shadow: 0 0 0 3px -moz-mac-focusring;
+  color: #222; 
+  outline: none;
+}
+.select-css option {
+  font-weight:normal;
 }
