--- a/src/CSS/Start.css
+++ b/src/CSS/Start.css
@@ -39,7 +39,13 @@
   bottom: 20px;
   transform: translate(-50%, -50%);
   margin: 0 auto;
-  text-align: center;
+}
+.random{
+  position: fixed;
+  left: 50%;
+  bottom: 0px;
+  transform: translate(-55%, -50%);
+  margin: 0 auto;
 }
 
 .select-css {
@@ -89,7 +95,6 @@
   user-select: none;
 }
 
-/* Hide the browser's default checkbox */
 .container input {
   position: absolute;
   opacity: 0;
@@ -105,7 +110,7 @@
   left: 0;
   height: 25px;
   width: 25px;
-  background-color: #eee;
+  background-color: rgb(190, 190, 190);
 }
 
 /* On mouse-over, add a grey background color */
@@ -121,7 +126,7 @@
 /* Create the checkmark/indicator (hidden when not checked) */
 .checkmark:after {
   content: "";
-  position: absolute;
+ position: absolute;
   display: none;
 }
 
